src/test/ui/error-codes/E0259.stderr
error[E0259]: the name `alloc` is defined multiple times
  --> $DIR/E0259.rs:6:1
   |
LL | extern crate alloc;
   | ------------------- previous import of the extern crate `alloc` here
LL | 
LL | extern crate libc as alloc;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `alloc` reimported here
   |
   = note: `alloc` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | extern crate libc as other_alloc;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0259`.
